fix: scrolling text incorrectly wrapping (#2)

--- a/src/app/scrollable-text/index.css
+++ b/src/app/scrollable-text/index.css
@@ -1,6 +1,7 @@
 .scrollable-text {
   overflow: hidden;
   position: relative;
+  white-space: nowrap;
 }
 
 .scrollable-text--scrolling:after {
